<resources>
    <string name="app_name">Event Hub</string>
    <string name="action_settings">Settings</string>

    <string name="eventString">Events</string>
    <string name="clubString">Clubs</string>
    <string name="aboutClub">About Club</string>
    <string name="eventDescription">Event Description</string>
    <string name="contacts">Contacts</string>
    <string name="broughtBy">Brought to you by : </string>
    <string name="addEvent">Add Event</string>
    <string name="addClub">Add Club</string>
    <string name="name">Name</string>
    <string name="alias">Alias</string>

    <string-array name="eventTabNames">
        <item>MY EVENTS</item>
        <item>TODAY</item>
        <item>UPCOMING</item>
    </string-array>

    <string name="noEventsToday">No Events for Today :(</string>
    <string name="noEventsUpcoming">No Upcoming Events :(</string>
    <string name="noEventsMy">You have not followed any Event or Club</string>

    <string name="refresh">Refresh</string>
    <string name="follow">Follow</string>
    <string name="followed">Followed</string>
    <string name="clubAdded">Club Addeds</string>

    <string name="noInternet">No Internet Connection!</string>
    <string name="slowInternet">Can\'t get new events. Network is too slow!</string>
    <string name="sentDataError">Invalid data sent to server.</string>
    <string name="refreshing">Getting events</string>
    <string name="noNewEvents">No new events</string>
    <string name="notAllowed">You are not allowed to do this action.</string>

    <!-- Button text -->
    <string name="btn_logout_from_google">Logout from Google</string>
    <string name="btn_revoke_access">Revoke Access</string>

    <string name="serverClientID">222064592113-ca6v3cjje8cd0p3u195ack4m0gdosqnf.apps.googleusercontent.com</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_login2">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="testString">
        This is an awesome event. Do attend it! Very informative for 3rd year B.Tech. students.
    </string>
    <string name="title_activity_main2">Main2Activity</string>

</resources>
