<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/activity_add_club"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.hemal.eventhub2.AddClubActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/name"
        android:ems="10"
        android:layout_marginTop="40dp"
        android:id="@+id/clubNameInput"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/alias"
        android:ems="10"
        android:layout_below="@+id/clubNameInput"
        android:layout_alignEnd="@+id/clubNameInput"
        android:layout_marginTop="30dp"
        android:id="@+id/clubAliasInput"/>

    <Button
        android:text="@string/addClub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/clubAliasInput"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:id="@+id/addClubButton"/>
</RelativeLayout>
